--- a/Editor/Html/Base.css
+++ b/Editor/Html/Base.css
@@ -106,6 +106,10 @@ ul.tree ul {
   padding-left: 1em;
 }
 
+ul.tree fieldset[disabled] {
+  pointer-events: none;
+}
+
 ul.tree input[type=checkbox] {
   appearance: none;
 }
