--- a/Editor/Html/Icons.css
+++ b/Editor/Html/Icons.css
@@ -63,6 +63,12 @@ tr[icon]>td:first-child>input {
   width: calc(100% - 21px);
 }
 
+ul.tree fieldset:has(>*[icon^=Folder])::before,
+tr[icon^=Folder]>td:first-child::before {
+  mask: url(../Html/Icon/Folder.svg);
+  -webkit-mask: url(../Html/Icon/Folder.svg);
+}
+
 ul.tree fieldset:has(>*[icon^=Mesh])::before,
 tr[icon^=Mesh]>td:first-child::before {
   mask: url(../Html/Icon/Mesh.svg);
@@ -112,6 +118,10 @@ ul.tree fieldset:has(>*[icon])::before {
   content: "►";
   background: var(--color-text);
   vertical-align: inherit;
+}
+
+ul.tree input[type="checkbox"]:has(+ fieldset>*[icon=Folder]) {
+  display: inline;
 }
 
 /* Panel titles */
