--- a/Test/UI.css
+++ b/Test/UI.css
@@ -1,7 +1,8 @@
 .ui-canvas {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Consolas, "Courier New", monospace;
   font-weight: bold;
   color: yellow;
+  
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
   padding: 0.2rem;
 }
